--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "nodejs-websocket": "^1.7.2"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.3",
     "multer": "^1.4.1"
