T0002添加-字体设置

--- a/T0002/user.ini
+++ b/T0002/user.ini
@@ -1,11 +1,11 @@
 [Other]
 bShowAllSelfLine=1
 RestFloat=0
-TdxUseCount_Suc=124
+TdxUseCount_Suc=126
 NetCondition=2
 bTreeShow=0
 bRestShow=0
-bDrawToolBarShow=1
+bDrawToolBarShow=0
 bDrawToolBarShow_Mul=0
 bToolBarShow=1
 bStatusBarShow=1
@@ -79,7 +79,7 @@ HasIFAxis=0
 XHidden=0
 YHidden=1
 FxtDrawHideK=0
-FirstChartZb=BOLL-M
+FirstChartZb=MA
 MultiChartZb=VOL-TDX
 LastKLine=
 LastExp=
@@ -510,11 +510,11 @@ FontWeigth2=400
 FONTNAME3=ËÎÌå
 FONTSIZE3=14
 FontWeigth3=400
-FONTNAME4=System
-FONTSIZE4=16
+FONTNAME4=Î¢ÈíÑÅºÚ
+FONTSIZE4=-23
 FontWeigth4=400
 FONTNAME5=ËÎÌå
-FONTSIZE5=14
+FONTSIZE5=-13
 FontWeigth5=400
 FONTNAME6=System
 FONTSIZE6=16
@@ -584,7 +584,7 @@ FxtBottomMore=0
 TQType=1
 PartTQ=0
 TqStart=20060101
-MainAxisStatus=3
+MainAxisStatus=0
 MainAxisType=0
 ZSTAxis=0
 ZSTAxis_Com2=0
@@ -640,7 +640,7 @@ CheckRisk=0
 RibbonBarIsExpand=1
 OutBarIsExpand=1
 RibbonVersion=2
-FxtTabSel=1
+FxtTabSel=0
 MoreSel00=0
 ZstMoreShow00=0
 FxtMoreShow00=0
@@ -763,8 +763,8 @@ SaveMainRect_Right=0
 SaveMainRect_Bottom=0
 LastVirutalx=0
 LastVirutaly=0
-LastVirutalCx=1536
-LastVirutalCy=864
+LastVirutalCx=1920
+LastVirutalCy=1080
 DefaultRestHeight=260
 CurSpecialIndex=1
 CurSpecialIndex2=1
@@ -777,7 +777,7 @@ Embed_SaveZhPos=0
 DefaultLine=0
 LineStyle=0
 LineWidth=0
-LineColor=8421376
+LineColor=65535
 HEXTEND=0
 VEXTEND=0
 TxtFontSize=8
@@ -785,7 +785,7 @@ AutoXGCalcAll=0
 BigDataExpand=0
 ShowGTJAFuncBar=0
 NoRelZS=0
-TdxUseCount=155
+TdxUseCount=157
 nOftenUseZb=11
 OftenUseZb00=DMI
 OftenUseZb01=DMA
