板块资金流历史

--- a/T0002/user.ini
+++ b/T0002/user.ini
@@ -1,5 +1,5 @@
 [Other]
-TdxUseCount=45
+TdxUseCount=52
 nOftenUseZb=13
 OftenUseZb00=ASI
 OftenUseZb01=MACD
@@ -28,7 +28,7 @@ OftenUseZb23=黄金线
 NetCondition=2
 bTreeShow=0
 bRestShow=0
-bDrawToolBarShow=0
+bDrawToolBarShow=1
 bDrawToolBarShow_Mul=0
 bToolBarShow=1
 bStatusBarShow=1
@@ -39,7 +39,7 @@ LastRestSel=0
 AutoPageTime=8
 ZFPeriod=5
 FirstGPType=-1
-FirstBlockFlag=2
+FirstBlockFlag=3
 FirstHisGPType=6
 FirstHisBlockFlag=0
 CalcGreeksType=0
@@ -98,8 +98,8 @@ BlockCache=1
 BlockToHead=0
 CheckUrgentDate=0
 CheckUrgent=0
-DrawToolPos_x=1383
-DrawToolPos_y=371
+DrawToolPos_x=1341
+DrawToolPos_y=323
 DrawToolPos_Mul_x=0
 DrawToolPos_Mul_y=0
 HasIFAxis=0
@@ -110,7 +110,7 @@ FirstChartZb=黄金分割线
 MultiChartZb=VOL-TDX
 LastKLine=
 LastExp=
-FavUseZb00=VOL-TDX
+FavUseZb00=黄金线
 FavUseZb01=VOL-TDX
 FavUseZb02=KDJ
 FavUseZb03=CCI
@@ -128,7 +128,7 @@ MultiChartZb_01=VOL-TDX
 LastKLine_01=
 LastExp_01=
 FavUseZb00_01=VOL-TDX
-FavUseZb01_01=MACD
+FavUseZb01_01=VOL-TDX
 FavUseZb02_01=KDJ
 FavUseZb03_01=CCI
 FavUseZb04_01=DMI
@@ -694,7 +694,7 @@ ZstNoAxis=0
 ZSTVolScale=7
 CusPageHKUS=0
 LastUsePeriod=0
-LastPeriod=2
+LastPeriod=4
 DefaultPeriod=4
 CheckRisk=0
 RibbonBarIsExpand=1
@@ -826,7 +826,7 @@ StatusGP2_2_Code=399006
 StatusGP3_2_Code=000688
 StatusBarShowZCJ=0
 LockStartDate=0
-LastIsMaximize=0
+LastIsMaximize=1
 SaveMainRect_Left=0
 SaveMainRect_Top=0
 SaveMainRect_Right=0
@@ -857,7 +857,7 @@ ShowGTJAFuncBar=0
 NoRelZS=0
 bShowAllSelfLine=1
 RestFloat=0
-TdxUseCount_Suc=29
+TdxUseCount_Suc=34
 [HK]
 DrawSeatName=0
 [HOTKEY]
