tooo2-7-26稍落后版本

--- a/T0002/hq_cache/tend_std.cfg
+++ b/T0002/hq_cache/tend_std.cfg
@@ -43,7 +43,7 @@ Name41=罗素大盘
 Name42=MSCI中盘
 Name43=社区团购
 Name44=RCEP概念
-Name45=航运
+Name45=航运概念
 Name46=生物育种
 Name47=eSIM
 Name48=定增破发
@@ -105,16 +105,16 @@ GroupAttribute=0
 ParentName=主题投资
 Type=0
 Name01=主力增仓前20
-Title01=主力增仓(DDE)前20名20210721
+Title01=主力增仓(DDE)前20名20210724
 ItemAttribute01=0
 Name02=主力减仓前20
-Title02=主力减仓(DDE)前20名20210721
+Title02=主力减仓(DDE)前20名20210724
 ItemAttribute02=0
 Name03=主力净流前20
-Title03=主力净流入(SUP)前20名20210721
+Title03=主力净流入(SUP)前20名20210724
 ItemAttribute03=0
 Name04=主力净流后20
-Title04=主力净流出(SUP)前20名20210721
+Title04=主力净流出(SUP)前20名20210724
 ItemAttribute04=0
 Num=8
 Name05=业绩预盈预增
@@ -521,8 +521,8 @@ BENCRYPTED=1
 GroupAttribute=-1
 ParentName=主题投资
 Type=0
-Name01=航运
-Title01=航运
+Name01=航运概念
+Title01=航运概念
 ItemAttribute01=0
 Num=1
 [GROUP46]
